Revert "Build Windows Installers using the repo's main build script and repotasks (#6139)"
This reverts commit 2b7a3a222af721a8b6ab1cbe6a40594a4270a3d8.

--- a/src/Framework/src/SharedFx.targets
+++ b/src/Framework/src/SharedFx.targets
@@ -4,6 +4,8 @@ This targets file should only be imported by .shfxproj files.
 -->
 <Project>
 
+  <Import Project="$(RepositoryRoot)build\tasks\RepoTasks.tasks" />
+
   <PropertyGroup>
     <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileFullPath)</MSBuildAllProjects>
 
