--- a/src/Framework/pkg/Metapackage.targets
+++ b/src/Framework/pkg/Metapackage.targets
@@ -38,6 +38,8 @@
     </TargetPathWithTargetPlatformMoniker>
   </ItemDefinitionGroup>
 
+  <Import Project="$(RepositoryRoot)build\tasks\RepoTasks.tasks" />
+
   <Target Name="PrepareOutputPaths">
     <MakeDir Directories="$(IntermediateOutputPath)" />
   </Target>
