--- a/src/SiteExtensions/Runtime/Directory.Build.targets
+++ b/src/SiteExtensions/Runtime/Directory.Build.targets
@@ -30,6 +30,8 @@
     </ItemGroup>
   </Target>
 
+  <Import Project="$(RepositoryRoot)build\tasks\RepoTasks.tasks" />
+
   <Import Project="$(RepositoryRoot)src\Servers\IIS\ResolveIisReferences.targets" />
 
   <Target Name="CopyFilesToOutputDirectory" />
